--- a/index.html
+++ b/index.html
@@ -4,47 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>СВОЯ ДИСПЕТЧЕРСКАЯ — Забота о ваших абонентах</title>
+
+    <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Шрифты -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Настройка Tailwind -->
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
               brand: {
-                50: '#f0f9ff',
+                50:  '#f0f9ff',
                 100: '#e0f2fe',
-                500: '#0ea5e9', // Sky blue - calm and professional
+                500: '#0ea5e9', // sky blue
                 600: '#0284c7',
                 700: '#0369a1',
                 900: '#0c4a6e',
               },
               accent: {
-                500: '#14b8a6', // Teal - caring and safe
-              }
+                500: '#14b8a6', // teal
+              },
             },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
-            }
-          }
-        }
-      }
+            },
+          },
+        },
+      };
     </script>
-  <script type="importmap">
-{
-  "imports": {
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
-  }
-}
-</script>
-</head>
+
+    <!-- importmap для React из Gemini-шаблона -->
+    <script type="importmap">
+    {
+      "imports": {
+        "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
+        "react-dom/":       "https://aistudiocdn.com/react-dom@^19.2.0/",
+        "lucide-react":     "https://aistudiocdn.com/lucide-react@^0.554.0",
+        "react/":           "https://aistudiocdn.com/react@^19.2.0/",
+        "react":            "https://aistudiocdn.com/react@^19.2.0"
+      }
+    }
+    </script>
+  </head>
+
   <body class="bg-slate-50 text-slate-800 font-sans antialiased">
     <div id="root"></div>
+    <!-- Подключаем React-приложение -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
