--- a/index.html
+++ b/index.html
@@ -4,61 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>СВОЯ ДИСПЕТЧЕРСКАЯ — Забота о ваших абонентах</title>
-
-    <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <!-- Шрифты -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Настройка Tailwind -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
               brand: {
-                50:  '#f0f9ff',
+                50: '#f0f9ff',
                 100: '#e0f2fe',
-                500: '#0ea5e9', // sky blue
+                500: '#0ea5e9', // Sky blue - calm and professional
                 600: '#0284c7',
                 700: '#0369a1',
                 900: '#0c4a6e',
               },
               accent: {
-                500: '#14b8a6', // teal
-              },
+                500: '#14b8a6', // Teal - caring and safe
+              }
             },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
-            },
-          },
-        },
-      };
-    </script>
-
-    <!-- importmap для React из Gemini-шаблона -->
-    <script type="importmap">
-    {
-      "imports": {
-        "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
-        "react-dom/":       "https://aistudiocdn.com/react-dom@^19.2.0/",
-        "lucide-react":     "https://aistudiocdn.com/lucide-react@^0.554.0",
-        "react/":           "https://aistudiocdn.com/react@^19.2.0/",
-        "react":            "https://aistudiocdn.com/react@^19.2.0"
+            }
+          }
+        }
       }
-    }
     </script>
-  </head>
-
+  <script type="importmap">
+{
+  "imports": {
+    "react-router-dom": "https://esm.sh/react-router-dom@6.22.3",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0",
+    "react/": "https://esm.sh/react@18.2.0/",
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+  }
+}
+</script>
+</head>
   <body class="bg-slate-50 text-slate-800 font-sans antialiased">
     <div id="root"></div>
-    <!-- Подключаем React-приложение -->
-    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
